--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1218,6 +1218,11 @@ h6 {
   font-size: 14px;
   transition: all 0.3s;
   border-top: 1px solid #cddfff;
+position: fixed;
+  bottom: 0;
+width: 100%;
+background-color: white;
+
 }
 
 .footer .copyright {
